--- a/projeto/login/login.css
+++ b/projeto/login/login.css
@@ -1,7 +1,7 @@
 /* style.css */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+    background-color: #00007E;
     margin: 0;
     padding: 0;
     display: flex;
@@ -11,11 +11,34 @@ body {
 }
 
 .login-container {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    padding: 20px;
+
+    border-radius: 25px;
+    box-shadow: inset 0 0 0 5px #c34034dc;
+    padding: 10px;
     width: 300px;
+    height: 350px;
+    align-items: center;
+    position: relative;
+    bottom: -260px ;
+    left: 45.2px!important;
+    transform: translateY(-50%);
+
+
+}
+.parteForaForm{
+    border-top-right-radius: 46%;
+    border-bottom-right-radius: 21%;
+    align-items: left;
+    background-image: linear-gradient(#764967d5, #040476,  #040477);
+    padding: 200px;
+    width: 300px;
+    height: 400px;
+    position: relative;
+    bottom: -340.9px;
+    left: -151.2px!important;
+    transform: translateY(-50%);
+   
+   
 }
 
 .login-container h2 {
@@ -25,50 +48,69 @@ body {
 
 .form-group {
     margin-bottom: 15px;
+    border: none; 
+    bottom: 30px;
+    position: relative;
 }
 
 .form-group label {
     display: block;
     font-weight: bold;
     color: #555;
+ 
+   
 }
 
 .input-field {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
+
+    width: 79%;
+    padding: 15px;
+    color: #e2938cd2;
     border-radius: 4px;
+    background-color: transparent;
+    border-color: transparent;
+    border-bottom: 2px solid #E35245;
+    position: relative;
+    left: 15px;
 }
+  
 
 .login-button {
     width: 100%;
-    padding: 10px;
-    background-color: #007BFF;
+    padding: 4px;
+    background-color: #E35245;
     color: #fff;
     border: none;
-    border-radius: 4px;
+    border-radius: 17px;
     cursor: pointer;
+    font-family:  sans-serif Impact, 'Arial Narrow Bold', sans-serif; 
+    font-size: 20px;
+    position: relative;
+    bottom: -29px;
 }
 
 .login-button:hover {
-    background-color: #0056b3;
+    background-color: #E35245;
 }
+
  /*botao voltar*/
  .back-button {
-    width: 93%;
-    padding: 9px;
-    background-color: #eb791c;
+    width: 55%;
+    padding: 4px;
+    background-color: #0400E0;
     color: #fff;
     border: none;
-    border-radius: 4px;
+    border-radius: 17px;
     cursor: pointer;
-    align-items: center;
-    justify-content: center;
+    position: relative;
+    font-family: sans-serif Impact, 'Arial Narrow Bold', sans-serif;
+    left: 68px!important;
+    bottom: 20px;
 }
 
 
 .back-button:hover {
-    background-color: #f06c00;
+    background-color: #1311aa;
 }
 .centro{
     align-items: center;
@@ -81,3 +123,26 @@ body {
 
 }
 /*botao voltar*/
+
+/*imagem de fundo*/
+.imagemLogin{
+    background-image: url("https://images.pexels.com/photos/3764000/pexels-photo-3764000.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    height: 740px;
+    width: 250%;
+    background-repeat: no-repeat; 
+    background-size: cover;
+}
+#username::placeholder{
+    color: #E35245;
+    position: relative;
+    top: 15px;
+    right: 15px;
+}
+#password::placeholder {
+    color: #E35245;
+    position: relative;
+    top: 15px;
+    right: 15px;
+}
+
+
